[package]
name = "challenge14"
version = "0.0.1"
authors = ["Tim Taubert <tim@timtaubert.de>"]

[dependencies.challenge6]
path = "../challenge6"

[dependencies.challenge9]
path = "../challenge9"

[dependencies.challenge10]
path = "../challenge10"

[dependencies.challenge11]
path = "../challenge11"

[dependencies.challenge12]
path = "../challenge12"

[dependencies.rand]
rand = "0.3"
