[package]
name = "challenge16"
version = "0.0.1"
authors = ["Tim Taubert <tim@timtaubert.de>"]

[dependencies.challenge2]
path = "../challenge2"

[dependencies.challenge7]
path = "../challenge7"

[dependencies.challenge9]
path = "../challenge9"

[dependencies.challenge10]
path = "../challenge10"

[dependencies.rand]
rand = "0.3"
